docs/upbound-provider-aws/0.24/appsync/v1beta1/datasource.md
---
permalink: /upbound-provider-aws/0.24/appsync/v1beta1/datasource/
---

# appsync.v1beta1.datasource

"Datasource is the Schema for the Datasources API. Provides an AppSync DataSource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withApiId(apiId)`](#fn-specforproviderwithapiid)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withDynamodbConfig(dynamodbConfig)`](#fn-specforproviderwithdynamodbconfig)
    * [`fn withDynamodbConfigMixin(dynamodbConfig)`](#fn-specforproviderwithdynamodbconfigmixin)
    * [`fn withElasticsearchConfig(elasticsearchConfig)`](#fn-specforproviderwithelasticsearchconfig)
    * [`fn withElasticsearchConfigMixin(elasticsearchConfig)`](#fn-specforproviderwithelasticsearchconfigmixin)
    * [`fn withHttpConfig(httpConfig)`](#fn-specforproviderwithhttpconfig)
    * [`fn withHttpConfigMixin(httpConfig)`](#fn-specforproviderwithhttpconfigmixin)
    * [`fn withLambdaConfig(lambdaConfig)`](#fn-specforproviderwithlambdaconfig)
    * [`fn withLambdaConfigMixin(lambdaConfig)`](#fn-specforproviderwithlambdaconfigmixin)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withRelationalDatabaseConfig(relationalDatabaseConfig)`](#fn-specforproviderwithrelationaldatabaseconfig)
    * [`fn withRelationalDatabaseConfigMixin(relationalDatabaseConfig)`](#fn-specforproviderwithrelationaldatabaseconfigmixin)
    * [`fn withServiceRoleArn(serviceRoleArn)`](#fn-specforproviderwithservicerolearn)
    * [`fn withType(type)`](#fn-specforproviderwithtype)
    * [`obj spec.forProvider.apiIdRef`](#obj-specforproviderapiidref)
      * [`fn withName(name)`](#fn-specforproviderapiidrefwithname)
      * [`obj spec.forProvider.apiIdRef.policy`](#obj-specforproviderapiidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapiidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapiidrefpolicywithresolve)
    * [`obj spec.forProvider.apiIdSelector`](#obj-specforproviderapiidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderapiidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderapiidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderapiidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.apiIdSelector.policy`](#obj-specforproviderapiidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderapiidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderapiidselectorpolicywithresolve)
    * [`obj spec.forProvider.dynamodbConfig`](#obj-specforproviderdynamodbconfig)
      * [`fn withDeltaSyncConfig(deltaSyncConfig)`](#fn-specforproviderdynamodbconfigwithdeltasyncconfig)
      * [`fn withDeltaSyncConfigMixin(deltaSyncConfig)`](#fn-specforproviderdynamodbconfigwithdeltasyncconfigmixin)
      * [`fn withRegion(region)`](#fn-specforproviderdynamodbconfigwithregion)
      * [`fn withTableName(tableName)`](#fn-specforproviderdynamodbconfigwithtablename)
      * [`fn withUseCallerCredentials(useCallerCredentials)`](#fn-specforproviderdynamodbconfigwithusecallercredentials)
      * [`fn withVersioned(versioned)`](#fn-specforproviderdynamodbconfigwithversioned)
      * [`obj spec.forProvider.dynamodbConfig.deltaSyncConfig`](#obj-specforproviderdynamodbconfigdeltasyncconfig)
        * [`fn withBaseTableTtl(baseTableTtl)`](#fn-specforproviderdynamodbconfigdeltasyncconfigwithbasetablettl)
        * [`fn withDeltaSyncTableName(deltaSyncTableName)`](#fn-specforproviderdynamodbconfigdeltasyncconfigwithdeltasynctablename)
        * [`fn withDeltaSyncTableTtl(deltaSyncTableTtl)`](#fn-specforproviderdynamodbconfigdeltasyncconfigwithdeltasynctablettl)
      * [`obj spec.forProvider.dynamodbConfig.tableNameRef`](#obj-specforproviderdynamodbconfigtablenameref)
        * [`fn withName(name)`](#fn-specforproviderdynamodbconfigtablenamerefwithname)
        * [`obj spec.forProvider.dynamodbConfig.tableNameRef.policy`](#obj-specforproviderdynamodbconfigtablenamerefpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderdynamodbconfigtablenamerefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderdynamodbconfigtablenamerefpolicywithresolve)
      * [`obj spec.forProvider.dynamodbConfig.tableNameSelector`](#obj-specforproviderdynamodbconfigtablenameselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdynamodbconfigtablenameselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdynamodbconfigtablenameselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdynamodbconfigtablenameselectorwithmatchlabelsmixin)
        * [`obj spec.forProvider.dynamodbConfig.tableNameSelector.policy`](#obj-specforproviderdynamodbconfigtablenameselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderdynamodbconfigtablenameselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderdynamodbconfigtablenameselectorpolicywithresolve)
    * [`obj spec.forProvider.elasticsearchConfig`](#obj-specforproviderelasticsearchconfig)
      * [`fn withEndpoint(endpoint)`](#fn-specforproviderelasticsearchconfigwithendpoint)
      * [`fn withRegion(region)`](#fn-specforproviderelasticsearchconfigwithregion)
    * [`obj spec.forProvider.httpConfig`](#obj-specforproviderhttpconfig)
      * [`fn withAuthorizationConfig(authorizationConfig)`](#fn-specforproviderhttpconfigwithauthorizationconfig)
      * [`fn withAuthorizationConfigMixin(authorizationConfig)`](#fn-specforproviderhttpconfigwithauthorizationconfigmixin)
      * [`fn withEndpoint(endpoint)`](#fn-specforproviderhttpconfigwithendpoint)
      * [`obj spec.forProvider.httpConfig.authorizationConfig`](#obj-specforproviderhttpconfigauthorizationconfig)
        * [`fn withAuthorizationType(authorizationType)`](#fn-specforproviderhttpconfigauthorizationconfigwithauthorizationtype)
        * [`fn withAwsIamConfig(awsIamConfig)`](#fn-specforproviderhttpconfigauthorizationconfigwithawsiamconfig)
        * [`fn withAwsIamConfigMixin(awsIamConfig)`](#fn-specforproviderhttpconfigauthorizationconfigwithawsiamconfigmixin)
        * [`obj spec.forProvider.httpConfig.authorizationConfig.awsIamConfig`](#obj-specforproviderhttpconfigauthorizationconfigawsiamconfig)
          * [`fn withSigningRegion(signingRegion)`](#fn-specforproviderhttpconfigauthorizationconfigawsiamconfigwithsigningregion)
          * [`fn withSigningServiceName(signingServiceName)`](#fn-specforproviderhttpconfigauthorizationconfigawsiamconfigwithsigningservicename)
    * [`obj spec.forProvider.lambdaConfig`](#obj-specforproviderlambdaconfig)
      * [`fn withFunctionArn(functionArn)`](#fn-specforproviderlambdaconfigwithfunctionarn)
    * [`obj spec.forProvider.relationalDatabaseConfig`](#obj-specforproviderrelationaldatabaseconfig)
      * [`fn withHttpEndpointConfig(httpEndpointConfig)`](#fn-specforproviderrelationaldatabaseconfigwithhttpendpointconfig)
      * [`fn withHttpEndpointConfigMixin(httpEndpointConfig)`](#fn-specforproviderrelationaldatabaseconfigwithhttpendpointconfigmixin)
      * [`fn withSourceType(sourceType)`](#fn-specforproviderrelationaldatabaseconfigwithsourcetype)
      * [`obj spec.forProvider.relationalDatabaseConfig.httpEndpointConfig`](#obj-specforproviderrelationaldatabaseconfighttpendpointconfig)
        * [`fn withAwsSecretStoreArn(awsSecretStoreArn)`](#fn-specforproviderrelationaldatabaseconfighttpendpointconfigwithawssecretstorearn)
        * [`fn withDatabaseName(databaseName)`](#fn-specforproviderrelationaldatabaseconfighttpendpointconfigwithdatabasename)
        * [`fn withDbClusterIdentifier(dbClusterIdentifier)`](#fn-specforproviderrelationaldatabaseconfighttpendpointconfigwithdbclusteridentifier)
        * [`fn withRegion(region)`](#fn-specforproviderrelationaldatabaseconfighttpendpointconfigwithregion)
        * [`fn withSchema(schema)`](#fn-specforproviderrelationaldatabaseconfighttpendpointconfigwithschema)
    * [`obj spec.forProvider.serviceRoleArnRef`](#obj-specforproviderservicerolearnref)
      * [`fn withName(name)`](#fn-specforproviderservicerolearnrefwithname)
      * [`obj spec.forProvider.serviceRoleArnRef.policy`](#obj-specforproviderservicerolearnrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderservicerolearnrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderservicerolearnrefpolicywithresolve)
    * [`obj spec.forProvider.serviceRoleArnSelector`](#obj-specforproviderservicerolearnselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderservicerolearnselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderservicerolearnselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderservicerolearnselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.serviceRoleArnSelector.policy`](#obj-specforproviderservicerolearnselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderservicerolearnselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderservicerolearnselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
    * [`obj spec.providerRef.policy`](#obj-specproviderrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Datasource

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"DatasourceSpec defines the desired state of Datasource"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource."

## obj spec.forProvider



### fn spec.forProvider.withApiId

```ts
withApiId(apiId)
```

"The API ID for the GraphQL API for the DataSource."

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"A description of the DataSource."

### fn spec.forProvider.withDynamodbConfig

```ts
withDynamodbConfig(dynamodbConfig)
```

"DynamoDB settings. See below"

### fn spec.forProvider.withDynamodbConfigMixin

```ts
withDynamodbConfigMixin(dynamodbConfig)
```

"DynamoDB settings. See below"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withElasticsearchConfig

```ts
withElasticsearchConfig(elasticsearchConfig)
```

"Amazon Elasticsearch settings. See below"

### fn spec.forProvider.withElasticsearchConfigMixin

```ts
withElasticsearchConfigMixin(elasticsearchConfig)
```

"Amazon Elasticsearch settings. See below"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withHttpConfig

```ts
withHttpConfig(httpConfig)
```

"HTTP settings. See below"

### fn spec.forProvider.withHttpConfigMixin

```ts
withHttpConfigMixin(httpConfig)
```

"HTTP settings. See below"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLambdaConfig

```ts
withLambdaConfig(lambdaConfig)
```

"AWS Lambda settings. See below"

### fn spec.forProvider.withLambdaConfigMixin

```ts
withLambdaConfigMixin(lambdaConfig)
```

"AWS Lambda settings. See below"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"AWS Region for RDS HTTP endpoint. Defaults to current region. Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withRelationalDatabaseConfig

```ts
withRelationalDatabaseConfig(relationalDatabaseConfig)
```

"AWS RDS settings. See Relational Database Config"

### fn spec.forProvider.withRelationalDatabaseConfigMixin

```ts
withRelationalDatabaseConfigMixin(relationalDatabaseConfig)
```

"AWS RDS settings. See Relational Database Config"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withServiceRoleArn

```ts
withServiceRoleArn(serviceRoleArn)
```

"The IAM service role ARN for the data source."

### fn spec.forProvider.withType

```ts
withType(type)
```

"The type of the DataSource. Valid values: AWS_LAMBDA, AMAZON_DYNAMODB, AMAZON_ELASTICSEARCH, HTTP, NONE, RELATIONAL_DATABASE."

## obj spec.forProvider.apiIdRef

"Reference to a GraphQLAPI in appsync to populate apiId."

### fn spec.forProvider.apiIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.apiIdRef.policy

"Policies for referencing."

### fn spec.forProvider.apiIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.apiIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.apiIdSelector

"Selector for a GraphQLAPI in appsync to populate apiId."

### fn spec.forProvider.apiIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.apiIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.apiIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.apiIdSelector.policy

"Policies for selection."

### fn spec.forProvider.apiIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.apiIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.dynamodbConfig

"DynamoDB settings. See below"

### fn spec.forProvider.dynamodbConfig.withDeltaSyncConfig

```ts
withDeltaSyncConfig(deltaSyncConfig)
```



### fn spec.forProvider.dynamodbConfig.withDeltaSyncConfigMixin

```ts
withDeltaSyncConfigMixin(deltaSyncConfig)
```



**Note:** This function appends passed data to existing values

### fn spec.forProvider.dynamodbConfig.withRegion

```ts
withRegion(region)
```

"AWS region of the DynamoDB table. Defaults to current region."

### fn spec.forProvider.dynamodbConfig.withTableName

```ts
withTableName(tableName)
```

"Name of the DynamoDB table."

### fn spec.forProvider.dynamodbConfig.withUseCallerCredentials

```ts
withUseCallerCredentials(useCallerCredentials)
```

"Set to true to use Amazon Cognito credentials with this data source."

### fn spec.forProvider.dynamodbConfig.withVersioned

```ts
withVersioned(versioned)
```



## obj spec.forProvider.dynamodbConfig.deltaSyncConfig



### fn spec.forProvider.dynamodbConfig.deltaSyncConfig.withBaseTableTtl

```ts
withBaseTableTtl(baseTableTtl)
```



### fn spec.forProvider.dynamodbConfig.deltaSyncConfig.withDeltaSyncTableName

```ts
withDeltaSyncTableName(deltaSyncTableName)
```

"A user-supplied name for the DataSource."

### fn spec.forProvider.dynamodbConfig.deltaSyncConfig.withDeltaSyncTableTtl

```ts
withDeltaSyncTableTtl(deltaSyncTableTtl)
```



## obj spec.forProvider.dynamodbConfig.tableNameRef

"Reference to a Table in dynamodb to populate tableName."

### fn spec.forProvider.dynamodbConfig.tableNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.dynamodbConfig.tableNameRef.policy

"Policies for referencing."

### fn spec.forProvider.dynamodbConfig.tableNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.dynamodbConfig.tableNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.dynamodbConfig.tableNameSelector

"Selector for a Table in dynamodb to populate tableName."

### fn spec.forProvider.dynamodbConfig.tableNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.dynamodbConfig.tableNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.dynamodbConfig.tableNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.dynamodbConfig.tableNameSelector.policy

"Policies for selection."

### fn spec.forProvider.dynamodbConfig.tableNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.dynamodbConfig.tableNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.elasticsearchConfig

"Amazon Elasticsearch settings. See below"

### fn spec.forProvider.elasticsearchConfig.withEndpoint

```ts
withEndpoint(endpoint)
```

"HTTP endpoint of the Elasticsearch domain."

### fn spec.forProvider.elasticsearchConfig.withRegion

```ts
withRegion(region)
```

"AWS region of Elasticsearch domain. Defaults to current region."

## obj spec.forProvider.httpConfig

"HTTP settings. See below"

### fn spec.forProvider.httpConfig.withAuthorizationConfig

```ts
withAuthorizationConfig(authorizationConfig)
```

"The authorization configuration in case the HTTP endpoint requires authorization. See Authorization Config."

### fn spec.forProvider.httpConfig.withAuthorizationConfigMixin

```ts
withAuthorizationConfigMixin(authorizationConfig)
```

"The authorization configuration in case the HTTP endpoint requires authorization. See Authorization Config."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.httpConfig.withEndpoint

```ts
withEndpoint(endpoint)
```

"HTTP URL."

## obj spec.forProvider.httpConfig.authorizationConfig

"The authorization configuration in case the HTTP endpoint requires authorization. See Authorization Config."

### fn spec.forProvider.httpConfig.authorizationConfig.withAuthorizationType

```ts
withAuthorizationType(authorizationType)
```

"The authorization type that the HTTP endpoint requires. Default values is AWS_IAM."

### fn spec.forProvider.httpConfig.authorizationConfig.withAwsIamConfig

```ts
withAwsIamConfig(awsIamConfig)
```

"The Identity and Access Management (IAM) settings. See AWS IAM Config."

### fn spec.forProvider.httpConfig.authorizationConfig.withAwsIamConfigMixin

```ts
withAwsIamConfigMixin(awsIamConfig)
```

"The Identity and Access Management (IAM) settings. See AWS IAM Config."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.httpConfig.authorizationConfig.awsIamConfig

"The Identity and Access Management (IAM) settings. See AWS IAM Config."

### fn spec.forProvider.httpConfig.authorizationConfig.awsIamConfig.withSigningRegion

```ts
withSigningRegion(signingRegion)
```

"The signing Amazon Web Services Region for IAM authorization."

### fn spec.forProvider.httpConfig.authorizationConfig.awsIamConfig.withSigningServiceName

```ts
withSigningServiceName(signingServiceName)
```

"The signing service name for IAM authorization."

## obj spec.forProvider.lambdaConfig

"AWS Lambda settings. See below"

### fn spec.forProvider.lambdaConfig.withFunctionArn

```ts
withFunctionArn(functionArn)
```

"The ARN for the Lambda function."

## obj spec.forProvider.relationalDatabaseConfig

"AWS RDS settings. See Relational Database Config"

### fn spec.forProvider.relationalDatabaseConfig.withHttpEndpointConfig

```ts
withHttpEndpointConfig(httpEndpointConfig)
```

"The Amazon RDS HTTP endpoint configuration. See HTTP Endpoint Config."

### fn spec.forProvider.relationalDatabaseConfig.withHttpEndpointConfigMixin

```ts
withHttpEndpointConfigMixin(httpEndpointConfig)
```

"The Amazon RDS HTTP endpoint configuration. See HTTP Endpoint Config."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.relationalDatabaseConfig.withSourceType

```ts
withSourceType(sourceType)
```

"Source type for the relational database. Valid values: RDS_HTTP_ENDPOINT."

## obj spec.forProvider.relationalDatabaseConfig.httpEndpointConfig

"The Amazon RDS HTTP endpoint configuration. See HTTP Endpoint Config."

### fn spec.forProvider.relationalDatabaseConfig.httpEndpointConfig.withAwsSecretStoreArn

```ts
withAwsSecretStoreArn(awsSecretStoreArn)
```

"AWS secret store ARN for database credentials."

### fn spec.forProvider.relationalDatabaseConfig.httpEndpointConfig.withDatabaseName

```ts
withDatabaseName(databaseName)
```

"Logical database name."

### fn spec.forProvider.relationalDatabaseConfig.httpEndpointConfig.withDbClusterIdentifier

```ts
withDbClusterIdentifier(dbClusterIdentifier)
```

"Amazon RDS cluster identifier."

### fn spec.forProvider.relationalDatabaseConfig.httpEndpointConfig.withRegion

```ts
withRegion(region)
```

"AWS Region for RDS HTTP endpoint. Defaults to current region."

### fn spec.forProvider.relationalDatabaseConfig.httpEndpointConfig.withSchema

```ts
withSchema(schema)
```

"Logical schema name."

## obj spec.forProvider.serviceRoleArnRef

"Reference to a Role in iam to populate serviceRoleArn."

### fn spec.forProvider.serviceRoleArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.serviceRoleArnRef.policy

"Policies for referencing."

### fn spec.forProvider.serviceRoleArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.serviceRoleArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.serviceRoleArnSelector

"Selector for a Role in iam to populate serviceRoleArn."

### fn spec.forProvider.serviceRoleArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.serviceRoleArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.serviceRoleArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.serviceRoleArnSelector.policy

"Policies for selection."

### fn spec.forProvider.serviceRoleArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.serviceRoleArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef.policy

"Policies for referencing."

### fn spec.providerRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which contains a name, metadata and a reference to secret store config to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used for this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret. - Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource. This field is planned to be replaced in a future release in favor of PublishConnectionDetailsTo. Currently, both could be set independently and connection details would be published to both without affecting each other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."